Remove some comments

--- a/House 3D/House.ipynb
+++ b/House 3D/House.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 59,
    "source": [
     "import glfw\n",
     "from OpenGL.GL import *\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 60,
    "source": [
     "glfw.init()\n",
     "glfw.window_hint(glfw.VISIBLE, glfw.FALSE);\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 61,
    "source": [
     "vertex_code = \"\"\"\n",
     "        attribute vec3 position;\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 62,
    "source": [
     "fragment_code = \"\"\"\n",
     "\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 63,
    "source": [
     "# Request a program and shader slots from GPU\n",
     "program  = glCreateProgram()\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 64,
    "source": [
     "# Set shaders source\n",
     "glShaderSource(vertex, vertex_code)\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 65,
    "source": [
     "# Compile shaders\n",
     "glCompileShader(vertex)\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 66,
    "source": [
     "glCompileShader(fragment)\n",
     "if not glGetShaderiv(fragment, GL_COMPILE_STATUS):\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 67,
    "source": [
     "# Attach shader objects to the program\n",
     "glAttachShader(program, vertex)\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 68,
    "source": [
     "# Build program\n",
     "glLinkProgram(program)\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 69,
    "source": [
     "def load_model_from_file(filename):\n",
     "    filepath = 'Objects/' + filename\n",
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 70,
    "source": [
     "glEnable(GL_TEXTURE_2D)\n",
     "textures = glGenTextures(qtd_texturas)\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 71,
    "source": [
     "vertices_list = []    \n",
     "textures_coord_list = []\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 72,
    "source": [
     "def increase_text(text_id):\n",
     "    global prox_textura\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 73,
    "source": [
     "modelo = load_model_from_file('terreno/pedra.obj')\n",
     "\n",
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 74,
    "source": [
     "modelo = load_model_from_file('terreno/grama.obj')\n",
     "\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 75,
    "source": [
     "modelo = load_model_from_file('casa/casa.obj')\n",
     "\n",
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 76,
    "source": [
     "modelo = load_model_from_file('sofa/sofa.obj')\n",
     "\n",
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 77,
    "source": [
     "modelo = load_model_from_file('tv/tv.obj')\n",
     "\n",
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 78,
    "source": [
     "modelo = load_model_from_file('arvore/arvore-1.obj')\n",
     "\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 79,
    "source": [
     "modelo = load_model_from_file('pato/pato.obj')\n",
     "\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 80,
    "source": [
     "modelo = load_model_from_file('mesa/mesa.obj')\n",
     "\n",
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 81,
    "source": [
     "modelo = load_model_from_file('ceu/ceu-quadrado.obj')\n",
     "\n",
@@ -843,22 +843,12 @@
     "ceu_text_id = []\n",
     "ceu_vertices_text = []\n",
     "ini_ceu = len(vertices_list)\n",
-    "vectorM = [-1.0,-1.0,-1.0]\n",
     "for face in modelo['faces']:\n",
     "    for vertice_id in face[0]:\n",
     "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
     "    for texture_id in face[1]:\n",
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "    for normal_id in face[2]:\n",
-    "        # f = float(modelo['normals'][normal_id-1][0])\n",
-    "        # f = f*-1\n",
-    "        # modelo['normals'][normal_id-1][0] = str(f)\n",
-    "        # f = float(modelo['normals'][normal_id-1][1])\n",
-    "        # f = f*-1\n",
-    "        # modelo['normals'][normal_id-1][1] = str(f)\n",
-    "        # f = float(modelo['normals'][normal_id-1][2])\n",
-    "        # f = f*-1\n",
-    "        # modelo['normals'][normal_id-1][2] = str(f)\n",
     "        normals_list.append(modelo['normals'][normal_id-1])\n",
     "print('Processando modelo ceu.obj. Vertice final:',len(vertices_list))\n",
     "fim_ceu = len(vertices_list)\n",
@@ -883,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 82,
    "source": [
     "modelo = load_model_from_file('carro/carro.obj')\n",
     "\n",
@@ -923,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 83,
    "source": [
     "modelo = load_model_from_file('cachorro/cachorro.obj')\n",
     "\n",
@@ -961,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 84,
    "source": [
     "modelo = load_model_from_file('homem/homem.obj')\n",
     "\n",
@@ -999,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 85,
    "source": [
     "modelo = load_model_from_file('cama/cama.obj')\n",
     "\n",
@@ -1037,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 86,
    "source": [
     "modelo = load_model_from_file('parede/wall.obj')\n",
     "\n",
@@ -1075,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 87,
    "source": [
     "modelo = load_model_from_file('arvore/arvore-2.obj')\n",
     "\n",
@@ -1121,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 88,
    "source": [
     "modelo = load_model_from_file('caveira/caveira.obj')\n",
     "\n",
@@ -1159,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 89,
    "source": [
     "modelo = load_model_from_file('lampada/lampada.obj')\n",
     "\n",
@@ -1197,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 90,
    "source": [
     "modelo = load_model_from_file('lanterna/lanterna.obj')\n",
     "\n",
@@ -1247,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 91,
    "source": [
     "# Request a buffer slot from GPU\n",
     "buffer = glGenBuffers(3)"
@@ -1264,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 92,
    "source": [
     "vertices = np.zeros(len(vertices_list), [(\"position\", np.float32, 3)])\n",
     "vertices['position'] = vertices_list\n",
@@ -1291,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 93,
    "source": [
     "textures = np.zeros(len(textures_coord_list), [(\"position\", np.float32, 2)]) # duas coordenadas\n",
     "textures['position'] = textures_coord_list\n",
@@ -1317,11 +1307,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 94,
    "source": [
     "normals = np.zeros(len(normals_list), [(\"position\", np.float32, 3)]) # três coordenadas\n",
     "normals['position'] = normals_list\n",
-    "\n",
     "\n",
     "# Upload coordenadas normals de cada vertice\n",
     "glBindBuffer(GL_ARRAY_BUFFER, buffer[2])\n",
@@ -1338,23 +1327,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Posição da fonte de luz"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "source": [
-    "# loc_light_pos = glGetUniformLocation(program, \"lightPos\") # recuperando localizacao da variavel lightPos na GPU\n",
-    "# glUniform3f(loc_light_pos, 20.5, 7.0, -10.25) ### posicao da fonte de luz"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "### Desenhando nossos modelos\n",
     "* Cada modelo tem um Model para posicioná-los no mundo.\n",
     "* É necessário saber qual a posição inicial e total de vértices de cada modelo\n",
@@ -1364,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 95,
    "source": [
     "def desenha_arvore1(_tx, _ty, _tz):\n",
     "    \n",
@@ -1418,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 96,
    "source": [
     "def desenha_terreno():\n",
     "    \n",
@@ -1437,8 +1409,8 @@
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
     "    \n",
     "    # coeficiente de reflexao ambiente do modelo\n",
-    "    # ka = 0.3\n",
     "    ka = ka_inc\n",
+    "    \n",
     "    # coeficiente de reflexao difusa do modelo\n",
     "    kd = 1.0\n",
     "\n",
@@ -1474,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 97,
    "source": [
     "def desenha_sofa():\n",
     "    \n",
@@ -1526,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 98,
    "source": [
     "def desenha_casa():\n",
     "    \n",
@@ -1578,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 99,
    "source": [
     "def desenha_tv():\n",
     "    \n",
@@ -1630,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 100,
    "source": [
     "def desenha_pato():\n",
     "    \n",
@@ -1709,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 101,
    "source": [
     "def desenha_mesa():\n",
     "    \n",
@@ -1762,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 102,
    "source": [
     "def desenha_ceu():\n",
     "    \n",
@@ -1814,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 103,
    "source": [
     "def desenha_carro():\n",
     "    \n",
@@ -1866,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 104,
    "source": [
     "def desenha_cachorro():\n",
     "    \n",
@@ -1918,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 105,
    "source": [
     "def desenha_homem():\n",
     "\n",
@@ -1971,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 106,
    "source": [
     "def desenha_cama():\n",
     "    \n",
@@ -2024,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 107,
    "source": [
     "def desenha_parede(tx, ty, tz, angle):\n",
     "    \n",
@@ -2071,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 108,
    "source": [
     "def desenha_arvore2(_tx, _ty, _tz):\n",
     "    \n",
@@ -2123,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 109,
    "source": [
     "def desenha_caveira(rotacao_inc):\n",
     "    \n",
@@ -2174,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 110,
    "source": [
     "def desenha_lampada():\n",
     "    \n",
@@ -2195,6 +2167,7 @@
     "    # coeficiente de reflexao ambiente do modelo\n",
     "    ka = ka_inc \n",
     "    \n",
+    "    # coeficiente de reflexao difusa do modelo\n",
     "    if(kd_inc == 1.5):\n",
     "        kd = 3.0\n",
     "    else:\n",
@@ -2219,7 +2192,7 @@
     "    glUniform1f(loc_ns, ns) ### envia ns pra gpu\n",
     "\n",
     "    loc_light_pos = glGetUniformLocation(program, \"lightPos\") # recuperando localizacao da variavel lightPos na GPU\n",
-    "    glUniform3f(loc_light_pos, 19.64, 8.00,-18.25) ### posicao da fonte de luz   \n",
+    "    glUniform3f(loc_light_pos, 19.64, 8.00,-18.25) ### posicao da primeira fonte de luz   \n",
     "\n",
     "    for i in range(0, len(lampada_text_id)):\n",
     "        glBindTexture(GL_TEXTURE_2D, lampada_text_id[i])\n",
@@ -2230,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 111,
    "source": [
     "def desenha_lanterna():\n",
     "\n",
@@ -2299,8 +2272,8 @@
     "    loc_ns = glGetUniformLocation(program, \"ns\") # recuperando localizacao da variavel ns na GPU\n",
     "    glUniform1f(loc_ns, ns) ### envia ns pra gpu        \n",
     "\n",
-    "    loc_light_pos = glGetUniformLocation(program, \"lightPos2\") # recuperando localizacao da variavel lightPos na GPU\n",
-    "    glUniform3f(loc_light_pos, tx, ty, tz) ### posicao da fonte de luz   \n",
+    "    loc_light_pos = glGetUniformLocation(program, \"lightPos2\") # recuperando localizacao da variavel lightPos2 na GPU\n",
+    "    glUniform3f(loc_light_pos, tx, ty, tz) ### posicao da segunda fonte de luz   \n",
     "\n",
     "    for i in range(0, len(lanterna_text_id)):\n",
     "        glBindTexture(GL_TEXTURE_2D, lanterna_text_id[i])\n",
@@ -2321,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 112,
    "source": [
     "cameraPos   = glm.vec3(10.0,  10.0,  10.0);\n",
     "cameraFront = glm.vec3(0.0,  0.0, -1.0);\n",
@@ -2472,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 113,
    "source": [
     "def model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z):\n",
     "    \n",
@@ -2519,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 114,
    "source": [
     "glfw.show_window(window)\n",
     "glfw.set_cursor_pos(window, lastX, lastY)"
@@ -2537,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 115,
    "source": [
     "glEnable(GL_DEPTH_TEST)\n",
     "global inc_x, dec_z, tx_tz, angle_duck\n",
